--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/categories.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/categories.html
@@ -9,19 +9,11 @@
     <div>
         <h1>Manage Categories</h1>
         <a th:href="@{/categories/new}">
-            <i class="fas fa-user-plus fa-3x icon-dark cursor-hand"></i>
+            <i class="fas fa-folder-plus fa-3x icon-dark cursor-hand"></i>
         </a>
         &nbsp;&nbsp;
         <a th:href="@{/categories/export/csv}">
             <i class="fas fa-file-csv fa-3x icon-dark cursor-hand"></i>
-        </a>
-        &nbsp;&nbsp;
-        <a th:href="@{/categories/export/pdf}">
-            <i class="fas fa-file-pdf fa-3x icon-dark cursor-hand"></i>
-        </a>
-        &nbsp;&nbsp;
-        <a th:href="@{/categories/export/excel}">
-            <i class="fas fa-file-excel fa-3x icon-dark cursor-hand"></i>
         </a>
     </div>
 
