Upgrade Check for Uniqueness 1. Update category bean 2. Mockito test for Service Layer 3. Updated Views

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
@@ -80,7 +80,7 @@
 							id="imageInput" name="image" />
 					</div>
 					<div class="col-sm-4">
-						<img th:src="@{/images/ShopmeAdminSmall.png}" id="imageView"
+						<img th:src="@{${user.photosImagePath}}" id="imageView"
 							alt="Image Preview" style="max-width: 200px; max-height: 200px;" />
 					</div>
 				</div>
