--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/categories.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/categories.html
@@ -65,9 +65,9 @@
 
 
                 <td style="width: 150px;"><a title="Edit this User"
-                                             class="cursor-hand" th:href="@{'/users/edit/'+${category.id} }">
+                                             class="cursor-hand" th:href="@{'/categories/edit/'+${category.id} }">
                     <i class="fas fa-edit fa-2x icon-green"></i>
-                </a> &nbsp; <a th:href="@{'/users/delete/'+${category.id}}"
+                </a> &nbsp; <a th:href="@{'/categories/delete/'+${category.id}}"
                                class="cursor-hand link-delete"> <i
                         class="fas fa-trash fa-2x icon-dark"> </i></a></td>
 
@@ -90,9 +90,9 @@
             </div>
             <div class="mt-2">
 
-                <a title="Edit this User" class="cursor-hand" th:href="@{'/users/edit/'+${category.id} }"> <i
+                <a title="Edit this User" class="cursor-hand" th:href="@{'/categories/edit/'+${category.id} }"> <i
                         class="fas fa-edit fa-2x icon-green"></i></a> &nbsp;
-                <a th:href="@{'/users/delete/'+${category.id}}" class="cursor-hand link-delete"> <i
+                <a th:href="@{'/categories/delete/'+${category.id}}" class="cursor-hand link-delete"> <i
                         class="fas fa-trash fa-2x icon-dark"> </i></a>
 
             </div>
