--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category_form.html
@@ -32,7 +32,7 @@
 					<label class="col-sm-4 col-form-label">Alias:</label>
 					<div class="col-sm-8">
 						<input type="text" th:field="*{alias}" class="form-control"
-							required minlength="2" maxlength="45" />
+							required minlength="2" maxlength="45" id="aliasInput" />
 					</div>
 				</div>
 
@@ -63,7 +63,7 @@
 						<input type="file"
 							id="imageInput" name="image" accept="image/png, image/jpeg" />
 						<div class="mt-2">
-							<img th:src="@{/images/image-thumbnail.png}" id="imageView"
+							<img th:src="@{ ${category.photosImagePath == null ? '/images/image-thumbnail.png' : category.photosImagePath}}" id="imageView"
 								 alt="Image Preview" style="max-width: 200px; max-height: 200px;" />
 						</div>
 					</div>
@@ -113,10 +113,12 @@
 			var name = $("#nameInput").val();
 			var csrfValue = $("input[name='_csrf']").val();
 			var userId = $("#id").val();
+			var alias = $("#aliasInput").val();
 			params = {
 				id : userId,
 				name : name,
-				_csrf : csrfValue
+				_csrf : csrfValue,
+				alias
 			};
 
 			$.post(
@@ -125,10 +127,14 @@
 					function(response) {
 						if (response === "OK") {
 							form.submit();
-						} else if (response === "Duplicated") {
+						} else if (response === "DuplicateName") {
 							showModalDialog("Warning!",
 									"There is another Category Having the Same Name "
 											+ name);
+						}else if (response === "DuplicateAlias"){
+							showModalDialog("Warning!",
+									"There is another Category Having the Same Alias "
+									+ alias);
 						} else {
 							showModalDialog("Error",
 									"Unknown response from Server");
