Brand Module: Refactoring Search Form

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/categories.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/categories.html
@@ -16,18 +16,7 @@
             <i class="fas fa-file-csv fa-3x icon-dark cursor-hand"></i>
         </a>
     </div>
-
-    <div class="m-1">
-        <form class="form-inline" th:action="@{/categories/page/1}">
-            <input type="hidden" name="sortField" th:value="${sortField}">
-            <input type="hidden" name="sortDir" th:value="${sortDir}">
-            <input class="form-control mr-sm-2" type="search" placeholder="Filter" aria-label="Search" name="keyword"
-                   id="keyword" required th:value="${keyword}">
-            <button class="btn btn-outline-primary my-2 my-sm-0 fas fa-search fa-3x" type="submit"></button>&nbsp;&nbsp;
-            <button class="btn btn-outline-secondary my-2 my-sm-0 fas fa-eraser fa-3x" type="button"
-                    onclick="clearFilter()"></button>
-        </form>
-    </div>
+    <div th:replace="~{fragments/fragments :: search_form_and_message('/categories/page/1')}"></div>
 
     <div class="full-details">
         <table
