--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/brand/brands.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/brand/brands.html
@@ -8,7 +8,7 @@
 
     <div>
         <h1>Manage Categories</h1>
-        <a th:href="@{/categories/new}">
+        <a th:href="@{/brands/new}">
             <i class="fas fa-folder-plus fa-3x icon-dark cursor-hand"></i>
         </a>
         &nbsp;&nbsp;
