--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/brand/brand_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/brand/brand_form.html
@@ -12,11 +12,11 @@
 		<div th:if="${message}" class="alert alert-success text-center"
 			th:text="${message}">[[${message}]]</div>
 
-		<form th:action="@{/brand/save}" method="post"
+		<form th:action="@{/brands/save}" method="post"
 			style="max-width: 500px; margin: 0 auto;" th:object="${brand}"
 			enctype="multipart/form-data" id="userForm"
-			onsubmit="return checkNameIsUnique(this);">
-			<input type="hidden" th:field="*{id}" />
+			onsubmit="return checkBrandIsUnique(this);">
+			<input th:field="*{id}" type="hidden"/>
 			<div class="border border-secondary rounded p-3">
 
 				<div class="form-group row">
@@ -80,19 +80,17 @@
 	<script type="text/javascript"
 			th:src="@{/js/common_form.js}"></script>
 	<script type="text/javascript">
-		moduleURL = "[[@{/categories}]]";
-		function checkNameIsUnique(form) {
+		moduleURL = "[[@{/brands}]]";
+		function checkBrandIsUnique(form) {
 
-			var url = "[[@{/categories/check_name}]]";
+			var url = "[[@{/brands/check_brand}]]";
 			var name = $("#nameInput").val();
 			var csrfValue = $("input[name='_csrf']").val();
-			var userId = $("#id").val();
-			var alias = $("#aliasInput").val();
+			var brandId = $("#id").val();
 			params = {
-				id : userId,
+				id : brandId,
 				name : name,
 				_csrf : csrfValue,
-				alias
 			};
 
 			$.post(
@@ -101,12 +99,8 @@
 					function(response) {
 						if (response === "OK") {
 							form.submit();
-						} else if (response === "DuplicateName") {
-							showWarningModal("There is another Category Having the Same Name "
-											+ name);
-						}else if (response === "DuplicateAlias"){
-							showWarningModal("There is another Category Having the Same Alias "
-									+ alias);
+						} else if (response === "Duplicated"){
+							showWarningModal("There is another Brand Having the Same Name: " + name);
 						} else {
 							showErrorModal("Unknown response from Server");
 						}
@@ -114,7 +108,6 @@
 					}).fail(function() {
 				showErrorModal("Could not Connect to Server.");
 			});
-
 			return false;
 		}
 
@@ -130,6 +123,7 @@
 				divChosenCategories.empty();
 				showChosenCategories();
 			});
+			showChosenCategories();
 		});
 		function showChosenCategories(){
 			dropdownCategories.children("option:selected").each(function(){
