--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/brand/brands.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/brand/brands.html
@@ -50,8 +50,7 @@
 
 
                 <td style="width: 150px;">
-                    <div th:replace="~{fragments/fragments :: edit('brand', '/brands/edit/'+${brand.id})}"></div>
-                    <div th:replace="~{fragments/fragments :: delete('brand', ${brand.id}, '/brands/delete/'+${brand.id})}"></div>
+                    <div th:replace="~{fragments/fragments :: edit_delete_fn('brands',${brand.id})}"></div>
                 </td>
 
 
@@ -71,49 +70,13 @@
                 <div>[[${brand.name}]]</div>
             </div>
             <div class="mt-2">
-
-                <a title="Edit this Brand" class="cursor-hand" th:href="@{'/brands/edit/'+${brand.id} }"> <i
-                        class="fas fa-edit fa-2x icon-green"></i></a> &nbsp;
-                <a th:href="@{'/brands/delete/'+${brand.id}}" class="cursor-hand link-delete"> <i
-                        class="fas fa-trash fa-2x icon-dark"> </i></a>
-
+                <div th:replace="~{fragments/fragments :: edit_delete_fn('brands',${brand.id})}"></div>
             </div>
             <div>&nbsp;</div>
         </div>
     </div>
 
-    <div th:if="${totalPages > 0}">
-        <nav>
-            <ul class="pagination justify-content-center">
-                <li
-                        th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(1, 'First', 'brands')}"></a>
-                </li>
-                <li
-                        th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(${(currentPage - 1 <= 0) ? 1 : (currentPage -1)}, 'Previous', 'brands')}"></a>
-                </li>
-
-                <li
-                        th:class="${currentPage != i ? 'page-item' : 'page-item active'}"
-                        th:each="i : ${#numbers.sequence(1, totalPages)}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(${i}, ${i.toString()}, 'brands')}"></a>
-
-                </li>
-
-                <li
-                        th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(${(currentPage+1)}, 'Next', 'brands')}"></a>
-                </li>
-
-
-                <li
-                        th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(${(totalPages)}, 'Last', 'brands')}"></a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+    <div th:replace="~{fragments/fragments :: pagination('brands', ${totalPages}, ${currentPage}, ${totalItems}, ${startCount}, ${endCount})}"></div>
 
 
     <div th:replace="~{fragments/modal :: modal_dialog}"></div>
