--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/categories.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/categories.html
@@ -55,8 +55,6 @@
 
                 <td style="width: 150px;">
                     <div th:replace="~{fragments/fragments :: category_actions}"></div></td>
-
-
             </tr>
             </tbody>
         </table>
@@ -74,62 +72,15 @@
                 <div>[[${category.alias}]]</div>
             </div>
             <div class="mt-2">
-
-                <a title="Edit this User" class="cursor-hand" th:href="@{'/categories/edit/'+${category.id} }"> <i
-                        class="fas fa-edit fa-2x icon-green"></i></a> &nbsp;
-                <a th:href="@{'/categories/delete/'+${category.id}}" class="cursor-hand link-delete"> <i
-                        class="fas fa-trash fa-2x icon-dark"> </i></a>
-
+                <div th:replace="~{fragments/fragments :: category_actions}"></div></td>
             </div>
             <div>&nbsp;</div>
         </div>
     </div>
 
-    <div class="text-center m-1" th:if="${totalItems > 0}">
-			<span>Showing Categories # [[${startCount}]] to [[${endCount}]] of
-				[[${totalItems}]]</span>
-    </div>
-
-    <div class="text-center m-1" th:if="${totalItems == 0}">
-        <span>No categories found</span>
-    </div>
-
-    <div th:if="${totalPages > 0}">
-        <nav>
-            <ul class="pagination justify-content-center">
-                <li
-                        th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(1, 'First', 'categories')}"></a>
-                </li>
-                <li
-                        th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(${(currentPage - 1 <= 0) ? 1 : (currentPage -1)}, 'Previous', 'categories')}"></a>
-                </li>
-
-                <li
-                        th:class="${currentPage != i ? 'page-item' : 'page-item active'}"
-                        th:each="i : ${#numbers.sequence(1, totalPages)}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(${i}, ${i.toString()}, 'categories')}"></a>
-
-                </li>
-
-                <li
-                        th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(${(currentPage+1)}, 'Next', 'categories')}"></a>
-                </li>
-
-
-                <li
-                        th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(${(totalPages)}, 'Last', 'categories')}"></a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-
+    <div th:replace="~{fragments/fragments :: pagination('categories', ${totalPages}, ${currentPage}, ${totalItems}, ${startCount}, ${endCount})}"></div>
 
     <div th:replace="~{fragments/modal :: modal_dialog}"></div>
-
 
     <footer th:replace="~{fragments/fragments :: footer}"></footer>
 </div>
