--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/fragments.html
@@ -51,14 +51,14 @@
     </th:block>
 </div>
 
-<a th:fragment="edit(context, link)"
-   class="cursor-hand"
-   th:href="@{${link}}">
-    <i class="fas fa-edit fa-2x icon-green"></i></a> &nbsp;
-<a th:fragment="delete(context, Id, link)"
-   th:href="@{${link}}"
-   class="cursor-hand link-delete">
-    <i class="fas fa-trash fa-2x icon-dark"> </i></a>
+<div th:fragment="edit_delete_fn(context,Id)">
+    <a class="cursor-hand" th:href="@{'/'+${context}+'/edit/'+${Id} }">
+        <i class="fas fa-edit fa-2x icon-green"></i></a> &nbsp;
+    <a th:href="@{'/'+${context}+'/delete/'+${Id} }"
+       class="cursor-hand link-delete">
+        <i class="fas fa-trash fa-2x icon-dark"> </i></a>
+</div>
+
 
 <div th:fragment="search_form_and_message(link)" class="m-1">
     <form class="form-inline" th:action="@{${link}}">
@@ -71,9 +71,53 @@
                 onclick="clearFilter()"></button>
     </form>
     <div th:if="${message}" class="alert alert-success text-center"
-         th:text="${message}">[[${message}]]</div>
+         th:text="${message}">[[${message}]]
+    </div>
 </div>
 
+<div th:fragment="pagination(context, totalPages, currentPage, totalItems, startCount, endCount)">
+    <div class="text-center m-1" th:if="${totalItems > 0}">
+			<span>Showing [[${#strings.capitalize(context)}]] # [[${startCount}]] to [[${endCount}]] of
+				[[${totalItems}]]</span>
+    </div>
+
+    <div class="text-center m-1" th:if="${totalItems == 0}">
+        <span>No [[${context}}]] found</span>
+    </div>
+
+    <div th:if="${totalPages > 0}">
+        <nav>
+            <ul class="pagination justify-content-center">
+                <li
+                        th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+                    <a th:replace="~{fragments/fragments :: pagination_link(1, 'First', ${context})}"></a>
+                </li>
+                <li
+                        th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+                    <a th:replace="~{fragments/fragments :: pagination_link(${(currentPage - 1 <= 0) ? 1 : (currentPage -1)}, 'Previous', ${context})}"></a>
+                </li>
+
+                <li
+                        th:class="${currentPage != i ? 'page-item' : 'page-item active'}"
+                        th:each="i : ${#numbers.sequence(1, totalPages)}">
+                    <a th:replace="~{fragments/fragments :: pagination_link(${i}, ${i.toString()}, ${context})}"></a>
+
+                </li>
+
+                <li
+                        th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+                    <a th:replace="~{fragments/fragments :: pagination_link(${(currentPage+1)}, 'Next', ${context})}"></a>
+                </li>
+
+
+                <li
+                        th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+                    <a th:replace="~{fragments/fragments :: pagination_link(${totalPages}, 'Last', ${context})}"></a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</div>
 
 
 <footer th:fragment="footer">
