--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -67,12 +67,7 @@
 
 
                 <td style="width: 150px;">
-                    <a title="Edit this User"
-                                             class="cursor-hand" th:href="@{'/users/edit/'+${user.id} }">
-                    <i class="fas fa-edit fa-2x icon-green"></i>
-                </a> &nbsp; <a th:href="@{'/users/delete/'+${user.id}}"
-                               class="cursor-hand link-delete"> <i
-                        class="fas fa-trash fa-2x icon-dark"> </i></a>
+                    <div th:replace="~{fragments/fragments :: edit_delete_fn('users',${user.id})}"></div>
                 </td>
 
 
@@ -93,58 +88,13 @@
                 <div>[[${user.roles}]]</div>
             </div>
             <div class="mt-2">
-
-                <a title="Edit this User" class="cursor-hand" th:href="@{'/users/edit/'+${user.id} }"> <i
-                        class="fas fa-edit fa-2x icon-green"></i></a> &nbsp;
-                <a th:href="@{'/users/delete/'+${user.id}}" class="cursor-hand link-delete"> <i
-                        class="fas fa-trash fa-2x icon-dark"> </i></a>
-
+                <div th:replace="~{fragments/fragments :: edit_delete_fn('users',${user.id})}"></div>
             </div>
             <div>&nbsp;</div>
         </div>
     </div>
 
-    <div class="text-center m-1" th:if="${totalItems > 0}">
-			<span>Showing Users # [[${startCount}]] to [[${endCount}]] of
-				[[${totalItems}]]</span>
-    </div>
-
-    <div class="text-center m-1" th:if="${totalItems == 0}">
-        <span>No users found</span>
-    </div>
-
-    <div th:if="${totalPages > 0}">
-        <nav>
-            <ul class="pagination justify-content-center">
-                <li
-                        th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(1, 'First', 'users')}"></a>
-                </li>
-                <li
-                        th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(${(currentPage - 1 <= 0) ? 1 : (currentPage -1)}, 'Previous', 'users')}"></a>
-                </li>
-
-                <li
-                        th:class="${currentPage != i ? 'page-item' : 'page-item active'}"
-                        th:each="i : ${#numbers.sequence(1, totalPages)}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(${i}, ${i.toString()}, 'users')}"></a>
-
-                </li>
-
-                <li
-                        th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(${(currentPage+1)}, 'Next', 'users')}"></a>
-                </li>
-
-
-                <li
-                        th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="~{fragments/fragments :: pagination_link(${(totalPages)}, 'Last', 'users')}"></a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+    <div th:replace="~{fragments/fragments :: pagination('users', ${totalPages}, ${currentPage}, ${totalItems}, ${startCount}, ${endCount})}"></div>
 
 
     <div th:replace="~{fragments/modal :: modal_dialog}"></div>
