Brand Module: Lesser Details fix

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/brand/brands.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/brand/brands.html
@@ -63,7 +63,7 @@
             <div class="col">
                 <i th:if="${brand.id == null}"
                    class="fas fa-portrait fa-3x icon-dark"></i>
-                <img th:src="@{${brand.logo}}" class="img-fluid"
+                <img th:src="@{${brand.logoPath}}" class="img-fluid"
                      style="max-width: 100px; max-height: 100px;"/>
             </div>
             <div class="col">
