--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/fragments.html
@@ -59,6 +59,17 @@
         <i class="fas fa-trash fa-2x icon-dark"> </i></a>
 </div>
 
+<div th:fragment="detail_edit_delete_fn(context,Id)">
+    <a class="fas fa-file-alt fa-2x icon-green"
+       title="View details of this products"
+       th:href="@{'/'+${context}+'/detail/'+${Id}}"></a>&nbsp;
+    <a class="cursor-hand" th:href="@{'/'+${context}+'/edit/'+${Id} }">
+        <i class="fas fa-edit fa-2x icon-green"></i></a> &nbsp;
+    <a th:href="@{'/'+${context}+'/delete/'+${Id} }"
+       class="cursor-hand link-delete">
+        <i class="fas fa-trash fa-2x icon-dark"> </i></a>
+</div>
+
 <div th:fragment="status(status, context, routingPass, id)">
     <a th:if="${status == true}" class="cursor-hand"
        th:href="@{'/'+${context}+'/'+${routingPass}+'/'+${id}+'/false'}"> <i
