--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+>
 <head th:fragment="head(title)">
     <meta charset="ISO-8859-1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -9,79 +9,131 @@
 </head>
 
 <body>
-    <div th:fragment="content" th:remove="tag">
+<div th:fragment="content" th:remove="tag">
 
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Product Name:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" th:field="*{name}" required minlength="3" maxlength="256" />
-            </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Product Name:</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" th:field="*{name}" required minlength="3" maxlength="256" id="nameInput"/>
         </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Alias:</label>
-            <div class="col-sm-10">
-                <input type="text" placeholder="Default is product name( spaces are replaced by dashes)"
-                       class="form-control" th:field="*{alias}" required minlength="3" maxlength="45" />
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Brand: </label>
-            <div class="col-sm-10">
-                <select class="form-control" th:field="*{brand}" id="brandSelect">
-                    <th:block th:each="brand: ${listBrands}">
-                        <option th:value="${brand.id}">[[${brand.name}]]</option>
-                    </th:block>
-                </select>
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Category: </label>
-            <div class="col-sm-10">
-                <select class="form-control" th:field="*{category}" id="categorySelect" disabled>
-                    <option value="">[No Category]</option>
-                </select>
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Enabled: </label>
-            <div class="col-sm-10">
-                <input type="checkbox" th:field="*{enabled}" required />
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">In-Stock: </label>
-            <div class="col-sm-10">
-                <input type="checkbox" th:field="*{inStock}" required />
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Cost: </label>
-            <div class="col-sm-10">
-                <input type="number" class="form-control" th:field="*{price}" required />
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">List Price: </label>
-            <div class="col-sm-10">
-                <input type="number" class="form-control" th:field="*{price}" required />
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Discount: </label>
-            <div class="col-sm-10">
-                <input type="number" class="form-control" th:field="*{discountPercent}" required />
-            </div>
-        </div>
-
     </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Alias:</label>
+        <div class="col-sm-10">
+            <input type="text" placeholder="Default is product name( spaces are replaced by dashes)"
+                   class="form-control" th:field="*{alias}" required minlength="3" maxlength="45"/>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Brand: </label>
+        <div class="col-sm-10">
+            <select class="form-control" th:field="*{brand}" id="brandSelect">
+                <th:block th:each="brand: ${listBrands}">
+                    <option th:value="${brand.id}">[[${brand.name}]]</option>
+                </th:block>
+            </select>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Category: </label>
+        <div class="col-sm-10">
+            <select class="form-control" th:field="*{category}" id="categorySelect" disabled>
+                <option value="">[No Category]</option>
+            </select>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Enabled: </label>
+        <div class="col-sm-10">
+            <input type="checkbox" th:field="*{enabled}" required/>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">In-Stock: </label>
+        <div class="col-sm-10">
+            <input type="checkbox" th:field="*{inStock}" required/>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Cost: </label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" th:field="*{price}" required/>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">List Price: </label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" th:field="*{price}" required/>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Discount: </label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" th:field="*{discountPercent}" required/>
+        </div>
+    </div>
+
+</div>
+<div th:fragment="description">
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Short Description: </label>
+        <div class="col-sm-10">
+                <textarea id="shortDesc" class="form-control" th:field="*{shortDescription}" rows="10" cols="20" maxlength="512"></textarea>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Full Description: </label>
+        <div class="col-sm-10">
+                <textarea id="longDesc" class="form-control" th:field="*{fullDescription}" rows="10" cols="20" maxlength="4096"></textarea>
+        </div>
+    </div>
+
+</div>
+<div th:fragment="shipping">
+
+    <p class="m-2">
+        The following information is important to calculate shipping cost for the product. <br>
+        The dimensions (L X W X H ) is for the box that is used to package the product - not the product itself
+    </p>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Length (inch): </label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" th:field="*{length}" required/>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Width (inch): </label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" th:field="*{width}" required/>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Height (inch): </label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" th:field="*{height}" required/>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Weight (pounds): </label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" th:field="*{weight}" required/>
+        </div>
+    </div>
+
 </body>
 </html>
 
