Product Module: Image OverView and cleanUPs

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/brand/brand_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/brand/brand_form.html
@@ -81,6 +81,7 @@
 			th:src="@{/js/common_form.js}"></script>
 	<script type="text/javascript">
 		moduleURL = "[[@{/brands}]]";
+		MAX_FILE_SIZE = 102400; // 500KB
 		function checkBrandIsUnique(form) {
 
 			var url = "[[@{/brands/check_brand}]]";
