--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
@@ -104,6 +104,7 @@
 			th:src="@{/js/common_form.js}"></script>
 	<script type="text/javascript">
 		moduleURL = "[[@{/users}]]";
+		MAX_FILE_SIZE = 502400; // 500KB
 		function checkEmailUnique(form) {
 
 			var url = "[[@{/users/check_email}]]";
