--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category_form.html
@@ -88,6 +88,7 @@
 			th:src="@{/js/common_form.js}"></script>
 	<script type="text/javascript">
 		moduleURL = "[[@{/categories}]]";
+		MAX_FILE_SIZE = 102400; // 500KB
 		function checkNameIsUnique(form) {
 
 			var url = "[[@{/categories/check_name}]]";
