--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/products.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/products.html
@@ -35,7 +35,12 @@
             <tbody>
             <tr th:each="product : ${listProducts}">
                 <td>[[${product.id}]]</td>
-                <td></td>
+                <td>
+                    <i th:if="${product.id == null}"
+                       class="fas fa-portrait fa-3x icon-dark"></i>
+                    <img th:src="@{${product.mainImagePath}}" class="img-fluid"
+                         style="max-width: 100px; max-height: 100px;"/>
+                </td>
                 <td>[[${product.name}]]</td>
                 <td>[[${product.brand.name}]]</td>
                 <td>[[${product.category.name}]]</td>
